# DORA

./: .gitignore  CONTRIBUTION.md  LICENSE  README.md  app.py  benchmark.py  build.py  config.yaml  dora_profile.prof  pyproject.toml  requirements.txt  run_dora.py  test.ipynb
.github/workflows/: ci.yaml  release.yaml
.streamlit/: config.toml
data/: marvel-vs-dc.csv
data/output/: eda_report.html
data/raw/: marvel-vs-dc.csv
docs/: index.html  script.js  style.css
dora/: bivariate_analysis.py  save_results.py  univariate_analysis.py
output/912223af-9a01-4f28-bec2-c6c88336807f/: eda_report.html
output/insurance_report/: eda_report.html
presentation/: EDA AUTOMATION.pptx  eda_presentation.pptx
src/: bivariate_analysis.py  dora.py  main.py  multivariate_analysis.py  save_results.py  univariate_analysis.py
src/dora/: __init__.py  analyzer.py  config.yaml  config_loader.py  data_loader.py  kaggle.py  main.py  profiling.py  schema.py  utils.py
src/dora/plots/: bivariate.py  multivariate.py  styling.py  univariate.py  utils.py
src/dora/reporting/: generator.py
src/dora/reporting/template/: report_template.html  repot_template.html
src/dora/reporting/templates/: report_template.html
src/output/: eda_presentation.pptx
src/output/stats/: univariate_analysis.txt
tests/: test_analyser.py  test_bivariate_analysis.py  test_high_cardinality.py  test_main.py  test_multivariate_analysis.py  test_save_results.py  test_schema.py  test_univariate_analysis.py
tests/output_test/stats/: test_stats.txt
